# Email-Triage

./: .gitignore  Dockerfile  README.md  app.py  environment.py  grader.py  inference.py  openenv.yaml  project_summary.md  push_log.txt  pyproject.toml  requirements.txt  results_phase2_optimized.json  results_rule_based.json  tasks.py
server/: app.py
