[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage"
version = "1.0.0"
description = "AI Email Triage OpenEnv environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "gradio>=4.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openenv-core>=0.2.0",
    "openai>=1.0.0"
]

[project.scripts]
server = "server.app:main"
