[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-triage"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
    "scikit-learn>=1.0.0",
    "gradio>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pyyaml>=6.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["."]